# DocStruct

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRODUCTION_GRADE_ASSESSMENT.md  README.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_fixer.py  verify_production_grade.py
.claude/: rules.md  settings.local.json
data/: Bando di Concorso a.a. 2025.26_ENG_0.md  Bando_Borse_di_studio_2025-2026_ENG.md  Competition-Notice-a.y.-2025_2026.md  Notice_of_competition_scholarship_accommodation_and_degree_award_a.y.2025.26 (1).md
docstruct/: __init__.py  exceptions.py
miner_mineru/: __init__.py
output/: Bando di Concorso a.a. 2025.26_ENG_0.json  Bando_Borse_di_studio_2025-2026_ENG.json  Competition-Notice-a.y.-2025_2026.json  MinerU_markdown_Bando_Borse_di_studio_2025-2026_ENG_2029898716306407424.json  MinerU_markdown_Bando_di_Concorso_a.a._2025.26_ENG_0_2029918507880611840.json  MinerU_markdown_Competition-Notice-a.y.-2025_2026_2029912065198985216.json  MinerU_markdown_Notice_of_competition_scholarship_accommodation_and_degree_award_a.y.2025.26_2026957185039605760.json  pipeline_results_20260309_113323.json
scripts/: README.md  run-extract.sh  run-fixer.sh  run-pipeline.sh  run_fixer.py  run_pipeline.py  test_json_loader.py
tests/: conftest.py  test_json_loader.py  test_llm_factory.py  test_llm_matcher.py  test_md_fixer.py  test_metadata.py  test_models.py  test_pageindex_workflow.py  test_rule_engine.py  test_summary.py  test_toc_boundary.py  test_toc_extraction.py
tools/: README.md  create_neo4j_indexes.py  run_fix.py  (+10 more)
(+206 files in other folders)
